rust/foxglove/src/websocket/ws_protocol/server/snapshots/foxglove__websocket__ws_protocol__server__playback_state__tests__encode_playing_with_request_id.snap
---
source: rust/foxglove/src/websocket/ws_protocol/server/playback_state.rs
assertion_line: 124
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x00,
    0x39,
    0x30,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x0e,
    0x00,
    0x00,
    0x00,
    0x69,
    0x2d,
    0x61,
    0x6d,
    0x2d,
    0x61,
    0x2d,
    0x72,
    0x65,
    0x71,
    0x75,
    0x65,
    0x73,
    0x74,
]
